fix - highlight animation overflow

--- a/src/app/game/cell/cell.component.scss
+++ b/src/app/game/cell/cell.component.scss
@@ -39,6 +39,7 @@ button {
 
   > img {
     width: 100%;
+    height: 100%;
   }
 }
 
